[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pip>=21.3"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-mcp-server"
version = "0.1.0"
description = "MCP server for terminal interaction"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "pydantic>=2.0.0",
    "pexpect>=4.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
terminal-mcp-server = "terminal_mcp_server.main:main"

[tool.setuptools]
packages = ["terminal_mcp_server"]

[tool.setuptools.package-data]
terminal_mcp_server = ["py.typed"]
